# staccato

./: .gitignore  README.md  render.yaml
.github/workflows/: ci.yml
asl-admin/: .env.example  README.md  next.config.ts  package-lock.json  package.json
asl-apple/: README.md  project.yml
asl-backend/: .env.example  README.md  pyproject.toml
asl-frontend/: .env.example  .gitignore  README.md  package-lock.json  package.json
docs/: AUDIT.md  STACCATO_SCORE.md
fixtures/: golden_vectors.json
staccato-admin/: .env.example  .gitignore  README.md  middleware.ts  next.config.ts  package-lock.json  package.json
staccato-backend/: .env.example  .gitignore  README.md  pyproject.toml
staccato-backend/staccato_backend/: auth.py  config.py  cron.py  db.py  main.py  models.py  schemas.py  storage.py
staccato-backend/staccato_backend/api/: admin.py  analyses.py  apple.py  health.py  live_sessions.py  public.py  serializers.py
staccato-backend/staccato_backend/engine/: __init__.py  __main__.py  detect.py  render.py  scoring.py
staccato-backend/staccato_backend/jobs/: __init__.py  tasks.py
staccato-backend/staccato_backend/providers/: __init__.py  youtube.py
staccato-backend/tests/: conftest.py  test_admin_and_apple.py  test_api_analyses.py  test_apple_chain_verification.py  test_engine_golden.py  test_engine_synthetic_video.py  test_entitlements_concurrency.py  test_jobs_inline.py  test_live_sessions.py  test_providers.py  test_security_hardening.py  utils.py
staccato-frontend/: .env.example  README.md  next.config.ts  package-lock.json  package.json
(+111 files in other folders)
