[project]
name = "staccato-backend"
version = "0.1.0"
description = "Staccato pacing scorer — API, workers, and the open-core scoring engine"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "procrastinate>=3.0",
    "httpx>=0.27",
    "pyjwt[crypto]>=2.8",
    "boto3>=1.34",
    # engine dependencies (kept minimal; see staccato_backend/engine/README note)
    "numpy>=1.24",
    "scenedetect>=0.6.4",
    "opencv-python-headless>=4.9",
    "matplotlib>=3.7",
    "yt-dlp>=2025.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["staccato_backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["slow: renders synthetic videos / runs full pipelines"]

[tool.ruff]
line-length = 100
target-version = "py312"
